--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,13 +1,20 @@
 <resources>
-    <string name="app_name">世界与勇士</string>
+    <string name="app_name">地球与勇士</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="nav_header_title">Android Studio</string>
     <string name="nav_header_subtitle">android.studio@android.com</string>
     <string name="nav_header_desc">Navigation header</string>
-    <string name="action_settings">Settings</string>
+
+    <string name="action_settings">设置</string>
+    <string name="action_logout">注销</string>
 
     <string name="menu_home">Home</string>
-    <string name="menu_gallery">Gallery</string>
-    <string name="menu_slideshow">Slideshow</string>
+    <string name="menu_task">任务</string>
+    <string name="menu_organization">组织</string>
+    <string name="register">注册</string>
+    <string name="login">登录</string>
+    <string name="password">密码</string>
+    <string name="username">用户名</string>
+    <string name="join_organization">加入新组织</string>
 </resources>
