--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,6 +25,8 @@
     <string name="title">标题</string>
     <string name="hint">输入提示</string>
     <string name="description">说明</string>
+    <string name="no_tasks">您还未接取任务</string>
+    <string name="no_org">您还未加入组织</string>
 
     <string-array name="organization_types_zh">
         <item>家庭</item>
